# AutoExperiment

./: AE_router.cpp  AutoExperiment.cpp  CMakeLists.txt  DisplayVideo.cpp  MotorControl.cpp  MotorControl.h  README.md  VideoAnalysis.cpp  VideoAnalysis.h
serial/: list_ports_linux.cc  list_ports_osx.cc  serial.cc  unix.cc  win.cc  win.h
